src/four_fingerprint.h

/* Data structures */

typedef struct {
    int32_t x;
    int32_t y;
    int32_t direction;  /* degrees * 10 */
    int32_t type;       /* 0=bifurcation, 1=ridge ending */
    double reliability;  /* 0.0 - 1.0 */
} FpMinutia;
typedef struct {
    int32_t finger_code;
    int32_t quality_score;
    int32_t minutia_count;
    int32_t is_live;
    int32_t resolution_ppi;
    double scale_factor;
} FpFingerResult;
typedef struct {
    int32_t success;
    int32_t num_fingers;
    int32_t total_minutiae;
    FpFingerResult fingers[10];
    FpMinutia *all_minutiae;
    int32_t all_minutiae_count;
    uint8_t *iso_template;
    int32_t iso_template_length;
} FpSlapResult;
typedef struct {
    int32_t current_step;
    int32_t left_ready;
    int32_t right_ready;
    int32_t thumbs_ready;
    int32_t initialized;
    int32_t capture_count;
} FpStateMachine;
typedef struct {
    int32_t min_x;
    int32_t min_y;
    int32_t max_x;
    int32_t max_y;
} FpBoundingBox;
typedef struct {
    int32_t finger_code;
    int32_t quality_score;
    int32_t minutia_count;
    int32_t is_live;
    int32_t resolution_ppi;
    double scale_factor;
    uint8_t *normalized_image;
    int32_t normalized_image_size;
    uint8_t *iso_template;
    int32_t iso_template_size;
    FpMinutia *minutiae;
    int32_t minutiae_count;
    uint8_t *encrypted_data;
    int32_t encrypted_data_size;
} FpProcessedFinger;
int32_t fp_wsq_decompress(
    const uint8_t *wsq_data, int32_t data_length,
    uint8_t *out_grayscale, int32_t out_width, int32_t out_height,
    int32_t *out_actual_width, int32_t *out_actual_height,
    int32_t *out_ppi
);
/* 11. Burst frame best-frame selection */
int32_t fp_select_best_frame(
    const uint8_t **frames, int32_t frame_count,
    int32_t width, int32_t height, int32_t ppi,
    int32_t *out_best_index
);
/* 12. Full pipeline: process a single slap frame */
int32_t fp_process_slap_frame(
    const uint8_t *rgb_frame, int32_t width, int32_t height,
    const float *hand_landmarks, int32_t landmark_count,
    int32_t *finger_codes,
    FpSlapResult *out_result,
    FpMinutia *out_minutia_buffer, int32_t max_minutiae,
    uint8_t *out_image_buffer, int32_t image_buffer_size
);
/* 13. Capture state machine */
int32_t fp_state_machine_init(FpStateMachine *state);
int32_t fp_state_machine_update(FpStateMachine *state, int32_t event);
int32_t fp_state_machine_get_step(const FpStateMachine *state);
/* 14. Encrypted storage (AES-256-GCM) */
int32_t fp_encrypt_data(
    const uint8_t *data, int32_t data_len,
    const uint8_t *key, int32_t key_len,
    uint8_t *out_encrypted, int32_t *out_enc_len
);
int32_t fp_decrypt_data(
    const uint8_t *data, int32_t data_len,
    const uint8_t *key, int32_t key_len,
    uint8_t *out_decrypted, int32_t *out_dec_len
);
/* 15. Process a single finger */
int32_t fp_process_finger(
    const uint8_t *rgb_frame, int32_t width, int32_t height,
    const float *hand_landmarks, int32_t landmark_count,
    int32_t finger_code,
    const FpBoundingBox *finger_roi,
    float scale_factor,
    FpProcessedFinger *out_finger
);
int32_t fp_is_match(int32_t match_score);
/* 16. Memory management */
void fp_free_slap_result(FpSlapResult *result);
void fp_free_processed_finger(FpProcessedFinger *finger);
/* 17. Version info */
const char *fp_get_version(void);