lib/four_fingerprint_bindings_generated.dart


  int fp_wsq_decompress(
    ffi.Pointer<ffi.Uint8> wsq_data,
    int data_length,
    ffi.Pointer<ffi.Uint8> out_grayscale,
    int out_width,
    int out_height,
    ffi.Pointer<ffi.Int32> out_actual_width,
    ffi.Pointer<ffi.Int32> out_actual_height,
    ffi.Pointer<ffi.Int32> out_ppi,
  ) {
    return _fp_wsq_decompress(
      wsq_data,
      data_length,
      out_grayscale,
      out_width,
      out_height,
      out_actual_width,
      out_actual_height,
      out_ppi,
    );
  }

  late final _fp_wsq_decompressPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Int32,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int32,
            ffi.Int32,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<ffi.Int32>,
          )
        >
      >('fp_wsq_decompress');
  late final _fp_wsq_decompress = _fp_wsq_decompressPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Uint8>,
          int,
          ffi.Pointer<ffi.Uint8>,
          int,
          int,
          ffi.Pointer<ffi.Int32>,
          ffi.Pointer<ffi.Int32>,
          ffi.Pointer<ffi.Int32>,
        )
      >();

  /// 11. Burst frame best-frame selection
  int fp_select_best_frame(
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> frames,
    int frame_count,
    int width,
    int height,
    int ppi,
    ffi.Pointer<ffi.Int32> out_best_index,
  ) {
    return _fp_select_best_frame(
      frames,
      frame_count,
      width,
      height,
      ppi,
      out_best_index,
    );
  }

  late final _fp_select_best_framePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
            ffi.Int32,
            ffi.Int32,
            ffi.Int32,
            ffi.Int32,
            ffi.Pointer<ffi.Int32>,
          )
        >
      >('fp_select_best_frame');
  late final _fp_select_best_frame = _fp_select_best_framePtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
          int,
          int,
          int,
          int,
          ffi.Pointer<ffi.Int32>,
        )
      >();

  /// 12. Full pipeline: process a single slap frame
  int fp_process_slap_frame(
    ffi.Pointer<ffi.Uint8> rgb_frame,
    int width,
    int height,
    ffi.Pointer<ffi.Float> hand_landmarks,
    int landmark_count,
    ffi.Pointer<ffi.Int32> finger_codes,
    ffi.Pointer<FpSlapResult> out_result,
    ffi.Pointer<FpMinutia> out_minutia_buffer,
    int max_minutiae,
    ffi.Pointer<ffi.Uint8> out_image_buffer,
    int image_buffer_size,
  ) {
    return _fp_process_slap_frame(
      rgb_frame,
      width,
      height,
      hand_landmarks,
      landmark_count,
      finger_codes,
      out_result,
      out_minutia_buffer,
      max_minutiae,
      out_image_buffer,
      image_buffer_size,
    );
  }

  late final _fp_process_slap_framePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Int32,
            ffi.Int32,
            ffi.Pointer<ffi.Float>,
            ffi.Int32,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<FpSlapResult>,
            ffi.Pointer<FpMinutia>,
            ffi.Int32,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int32,
          )
        >
      >('fp_process_slap_frame');
  late final _fp_process_slap_frame = _fp_process_slap_framePtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Uint8>,
          int,
          int,
          ffi.Pointer<ffi.Float>,
          int,
          ffi.Pointer<ffi.Int32>,
          ffi.Pointer<FpSlapResult>,
          ffi.Pointer<FpMinutia>,
          int,
          ffi.Pointer<ffi.Uint8>,
          int,
        )
      >();

  /// 13. Capture state machine
  int fp_state_machine_init(ffi.Pointer<FpStateMachine> state) {
    return _fp_state_machine_init(state);
  }

  late final _fp_state_machine_initPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<FpStateMachine>)>
      >('fp_state_machine_init');
  late final _fp_state_machine_init = _fp_state_machine_initPtr
      .asFunction<int Function(ffi.Pointer<FpStateMachine>)>();

  int fp_state_machine_update(ffi.Pointer<FpStateMachine> state, int event) {
    return _fp_state_machine_update(state, event);
  }

  late final _fp_state_machine_updatePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<FpStateMachine>, ffi.Int32)
        >
      >('fp_state_machine_update');
  late final _fp_state_machine_update = _fp_state_machine_updatePtr
      .asFunction<int Function(ffi.Pointer<FpStateMachine>, int)>();

  int fp_state_machine_get_step(ffi.Pointer<FpStateMachine> state) {
    return _fp_state_machine_get_step(state);
  }

  late final _fp_state_machine_get_stepPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<FpStateMachine>)>
      >('fp_state_machine_get_step');
  late final _fp_state_machine_get_step = _fp_state_machine_get_stepPtr
      .asFunction<int Function(ffi.Pointer<FpStateMachine>)>();

  /// 14. Encrypted storage (AES-256-GCM)
  int fp_encrypt_data(
    ffi.Pointer<ffi.Uint8> data,
    int data_len,
    ffi.Pointer<ffi.Uint8> key,
    int key_len,
    ffi.Pointer<ffi.Uint8> out_encrypted,
    ffi.Pointer<ffi.Int32> out_enc_len,
  ) {
    return _fp_encrypt_data(
      data,
      data_len,
      key,
      key_len,
      out_encrypted,
      out_enc_len,
    );
  }

  late final _fp_encrypt_dataPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Int32,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int32,
            ffi.Pointer<ffi.Uint8>,
            ffi.Pointer<ffi.Int32>,
          )
        >
      >('fp_encrypt_data');
  late final _fp_encrypt_data = _fp_encrypt_dataPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Uint8>,
          int,
          ffi.Pointer<ffi.Uint8>,
          int,
          ffi.Pointer<ffi.Uint8>,
          ffi.Pointer<ffi.Int32>,
        )
      >();

  int fp_decrypt_data(
    ffi.Pointer<ffi.Uint8> data,
    int data_len,
    ffi.Pointer<ffi.Uint8> key,
    int key_len,
    ffi.Pointer<ffi.Uint8> out_decrypted,
    ffi.Pointer<ffi.Int32> out_dec_len,
  ) {
    return _fp_decrypt_data(
      data,
      data_len,
      key,
      key_len,
      out_decrypted,
      out_dec_len,
    );
  }

  late final _fp_decrypt_dataPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Int32,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int32,
            ffi.Pointer<ffi.Uint8>,
            ffi.Pointer<ffi.Int32>,
          )
        >
      >('fp_decrypt_data');
  late final _fp_decrypt_data = _fp_decrypt_dataPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Uint8>,
          int,
          ffi.Pointer<ffi.Uint8>,
          int,
          ffi.Pointer<ffi.Uint8>,
          ffi.Pointer<ffi.Int32>,
        )
      >();

  /// 15. Process a single finger
  int fp_process_finger(
    ffi.Pointer<ffi.Uint8> rgb_frame,
    int width,
    int height,
    ffi.Pointer<ffi.Float> hand_landmarks,
    int landmark_count,
    int finger_code,
    ffi.Pointer<FpBoundingBox> finger_roi,
    double scale_factor,
    ffi.Pointer<FpProcessedFinger> out_finger,
  ) {
    return _fp_process_finger(
      rgb_frame,
      width,
      height,
      hand_landmarks,
      landmark_count,
      finger_code,
      finger_roi,
      scale_factor,
      out_finger,
    );
  }

  late final _fp_process_fingerPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Int32,
            ffi.Int32,
            ffi.Pointer<ffi.Float>,
            ffi.Int32,
            ffi.Int32,
            ffi.Pointer<FpBoundingBox>,
            ffi.Float,
            ffi.Pointer<FpProcessedFinger>,
          )
        >
      >('fp_process_finger');
  late final _fp_process_finger = _fp_process_fingerPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Uint8>,
          int,
          int,
          ffi.Pointer<ffi.Float>,
          int,
          int,
          ffi.Pointer<FpBoundingBox>,
          double,
          ffi.Pointer<FpProcessedFinger>,
        )
      >();

  int fp_is_match(int match_score) {
    return _fp_is_match(match_score);
  }

  late final _fp_is_matchPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int32)>>('fp_is_match');
  late final _fp_is_match = _fp_is_matchPtr.asFunction<int Function(int)>();

  /// 16. Memory management
  void fp_free_slap_result(ffi.Pointer<FpSlapResult> result) {
    return _fp_free_slap_result(result);
  }

  late final _fp_free_slap_resultPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<FpSlapResult>)>>(
        'fp_free_slap_result',
      );
  late final _fp_free_slap_result = _fp_free_slap_resultPtr
      .asFunction<void Function(ffi.Pointer<FpSlapResult>)>();

  void fp_free_processed_finger(ffi.Pointer<FpProcessedFinger> finger) {
    return _fp_free_processed_finger(finger);
  }

  late final _fp_free_processed_fingerPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<FpProcessedFinger>)>
      >('fp_free_processed_finger');
  late final _fp_free_processed_finger = _fp_free_processed_fingerPtr
      .asFunction<void Function(ffi.Pointer<FpProcessedFinger>)>();

  /// 17. Version info
  ffi.Pointer<ffi.Char> fp_get_version() {
    return _fp_get_version();
  }

  late final _fp_get_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'fp_get_version',
      );
  late final _fp_get_version = _fp_get_versionPtr
      .asFunction<ffi.Pointer<ffi.Char> Function()>();
}

/// Data structures
final class FpMinutia extends ffi.Struct {
  @ffi.Int32()
  external int x;

  @ffi.Int32()
  external int y;

  /// degrees * 10
  @ffi.Int32()
  external int direction;

  /// 0=bifurcation, 1=ridge ending
  @ffi.Int32()
  external int type;

  /// 0.0 - 1.0
  @ffi.Double()
  external double reliability;
}

final class FpFingerResult extends ffi.Struct {
  @ffi.Int32()
  external int finger_code;

  @ffi.Int32()
  external int quality_score;

  @ffi.Int32()
  external int minutia_count;

  @ffi.Int32()
  external int is_live;

  @ffi.Int32()
  external int resolution_ppi;

  @ffi.Double()
  external double scale_factor;
}

final class FpSlapResult extends ffi.Struct {
  @ffi.Int32()
  external int success;

  @ffi.Int32()
  external int num_fingers;

  @ffi.Int32()
  external int total_minutiae;

  @ffi.Array.multi([10])
  external ffi.Array<FpFingerResult> fingers;

  external ffi.Pointer<FpMinutia> all_minutiae;

  @ffi.Int32()
  external int all_minutiae_count;

  external ffi.Pointer<ffi.Uint8> iso_template;

  @ffi.Int32()
  external int iso_template_length;
}

final class FpStateMachine extends ffi.Struct {
  @ffi.Int32()
  external int current_step;

  @ffi.Int32()
  external int left_ready;

  @ffi.Int32()
  external int right_ready;

  @ffi.Int32()
  external int thumbs_ready;

  @ffi.Int32()
  external int initialized;

  @ffi.Int32()
  external int capture_count;
}

final class FpBoundingBox extends ffi.Struct {
  @ffi.Int32()
  external int min_x;

  @ffi.Int32()
  external int min_y;

  @ffi.Int32()
  external int max_x;

  @ffi.Int32()
  external int max_y;
}

final class FpProcessedFinger extends ffi.Struct {
  @ffi.Int32()
  external int finger_code;

  @ffi.Int32()
  external int quality_score;

  @ffi.Int32()
  external int minutia_count;

  @ffi.Int32()
  external int is_live;

  @ffi.Int32()
  external int resolution_ppi;

  @ffi.Double()
  external double scale_factor;

  external ffi.Pointer<ffi.Uint8> normalized_image;
